2007-06-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Partially revert last commit, and fail
	with AC_MSG_ERROR() instead of disabling the manual build
	if no jw and xmlto were found.

2007-06-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: If the programs required to build the manual
	are not found and --enable-manual was passed, then just print
	a warning and disable the manual build instead of aborting the
	configure.

	* doc/manual/Makefile.am: Use the full path gathered by the
	configure script when invoking jw and xmlto.

2007-06-16  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	Fix typo in x rotation transform (Thanks to Johan Billen #138)

	* configure.ac:
	* doc/manual/Makefile.am:
	Fix manual build and required program check.

	* tests/Makefile.am:
	Another typo fix.

2007-06-15  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	Added some comments; renamed MTX_GL_SCALE to MTX_GL_SCALE_X for
	consistency; removed some debug output.

2007-06-14  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-vbox.c:
	* clutter/clutter-hbox.c:
	(clutter_vbox_pack_child):
	(clutter_hbox_pack_child):
	Fixed child coords.
	
2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-box.[ch]: Base class for layout containers.

	* clutter/clutter-hbox.[ch]: Horizontal box actor.
	
	* clutter/clutter-vbox.[ch]: Vertical box actor.

	* clutter/clutter.h:
	* clutter/Makefile.am: Build glue

	* tests/Makefile.am:
	* tests/test-boxes.c: Test suite for ClutterBox API and
	implementations.

2007-06-14  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gl/cogl.c: (cogl_check_extension):
	Actually populate this func and remove the static alternate
	named one. Means GLX actually checks for available extensions.
	Other minor tidy ups.
	
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	Add support for GLX_SGI_swap_control to do vblanking prefering 